--- a/projects.json
+++ b/projects.json
@@ -1,10 +1,22 @@
 {
   [
     {
-      "name": "online";
-      "id": "718134419";
-      "detail": "オンラインで最大5人までプレイできるゲームです。";
-      "HowToUse": "矢印キーで移動<br>数字キーでステージ移動<br>zで木から降りる<br>xでジェットパックを起動<br>cでチャット<br>nで鬼(周りが赤)<br>mで子(周りが青)<br>bで鬼ごっこ終了";
+      "name": "オンライン広場",
+      "id": "718134419",
+      "detail": "最大5人までプレイできるオンラインゲームです。",
+      "HowToUse": "矢印キーで移動<br>数字キーでステージ移動<br>zで木から降りる<br>xでジェットパックを起動<br>cでチャット<br>nで鬼(周りが赤)<br>mで子(周りが青)<br>bで鬼ごっこ終了"
+    },
+    {
+      "name": "怪盗ゲーム 第2話",
+      "id": "901024720",
+      "detail": "スタートから警察官や防犯カメラ、レーザーに見つからないように宝石を盗んでゴールへ行くゲームです。第1話は<a href='https://scratch.mit.edu/projects/666133831/'>こちら</a>",
+      "HowToUse": "矢印キーで移動、ボタンは非推奨です。"
+    },
+    {
+      "name": "弓矢ゲーム",
+      "id": "865738724",
+      "detail": "敵の矢をよけながら的や敵に矢を当てるゲームです。アイテムも使いながら高得点を目指しましょう。",
+      "HowToUse": "上下キーで操作、スぺスキーで発射します。(連射可)　アイテムは触れたら使えます。"
     }
   ]
 }
