--- a/projects.json
+++ b/projects.json
@@ -8,7 +8,7 @@
   {
     "name": "怪盗ゲーム 第2話",
     "id": "901024720",
-    "detail": "スタートから警察官や防犯カメラ、レーザーに見つからないように宝石を盗んでゴールへ行くゲームです。第1話は<a href='https://scratch.mit.edu/projects/666133831/'>こちら</a>",
+    "detail": "スタートから警察官や防犯カメラ、レーザーに見つからないように宝石を盗んでゴールへ行くゲームです。第1話は<a href='https://scratch.mit.edu/projects/666133831'>こちら</a>",
     "HowToUse": "矢印キーで移動、ボタンは非推奨です。"
   },
   {
