--- a/projects.json
+++ b/projects.json
@@ -6,7 +6,7 @@
     "HowToUse": "矢印キーで移動<br>数字キーでステージ移動<br>zで木から降りる<br>xでジェットパックを起動<br>cでチャット<br>nで鬼(周りが赤)<br>mで子(周りが青)<br>bで鬼ごっこ終了"
   },
   {
-    "name": "怪盗ゲーム 第2話",
+    "name": "怪盗ゲーム2",
     "id": "901024720",
     "detail": "スタートから警察官や防犯カメラ、レーザーに見つからないように宝石を盗んでゴールへ行くゲームです。第1話は<a href='https://scratch.mit.edu/projects/666133831'>こちら</a>",
     "HowToUse": "矢印キーで移動、ボタンは非推奨です。"
