--- a/projects.json
+++ b/projects.json
@@ -9,7 +9,7 @@
     "name": "怪盗ゲーム2",
     "id": "901024720",
     "detail": "スタートから警察官や防犯カメラ、レーザーに見つからないように宝石を盗んでゴールへ行くゲームです。第1話は<a href='https://scratch.mit.edu/projects/666133831'>こちら</a>",
-    "HowToUse": "矢印キーで移動、ボタンは非推奨です。"
+    "HowToUse": "矢印キーで移動、ボタンは非推奨です。",
     "urls": {
       "label": "第1話は",
       "url": "https://scratch.mit.edu/projects/666133831",
