--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "HackerWeb",
-  "short_name": "HackerWeb",
+  "name": "lego0821",
+  "short_name": "lego0821",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#fff",
