--- a/projects.json
+++ b/projects.json
@@ -3,7 +3,11 @@
     "name": "オンライン広場",
     "id": "718134419",
     "detail": "最大5人までプレイできるオンラインゲームです。",
-    "HowToUse": "矢印キーで移動<br>数字キーでステージ移動<br>zで木から降りる<br>xでジェットパックを起動<br>cでチャット<br>nで鬼(周りが赤)<br>mで子(周りが青)<br>bで鬼ごっこ終了"
+    "HowToUse": {
+      "L1":"矢印キーで移動",
+      "L2":"数字キーでステージ移動",
+      "L3":"zで木から降りる<br>xでジェットパックを起動<br>cでチャット<br>nで鬼(周りが赤)<br>mで子(周りが青)<br>bで鬼ごっこ終了"
+    }
   },
   {
     "name": "怪盗ゲーム2",
