--- a/projects.json
+++ b/projects.json
@@ -6,7 +6,12 @@
     "HowToUse": {
       "L1":"矢印キーで移動",
       "L2":"数字キーでステージ移動",
-      "L3":"zで木から降りる<br>xでジェットパックを起動<br>cでチャット<br>nで鬼(周りが赤)<br>mで子(周りが青)<br>bで鬼ごっこ終了"
+      "L3":"zで木から降りる",
+      "L4":"xでジェットパックを起動",
+      "L5":"cでチャット",
+      "L6":"nで鬼(周りが赤)",
+      "L7":"mで子(周りが青)",
+      "L8":"bで鬼ごっこ終了"
     }
   },
   {
