--- a/projects.json
+++ b/projects.json
@@ -3,16 +3,16 @@
     "name": "オンライン広場",
     "id": "718134419",
     "detail": "最大5人までプレイできるオンラインゲームです。",
-    "HowToUse": {
-      "L1":"矢印キーで移動",
-      "L2":"数字キーでステージ移動",
-      "L3":"zで木から降りる",
-      "L4":"xでジェットパックを起動",
-      "L5":"cでチャット",
-      "L6":"nで鬼(周りが赤)",
-      "L7":"mで子(周りが青)",
-      "L8":"bで鬼ごっこ終了"
-    }
+    "HowToUse": [
+      "矢印キーで移動",
+      "数字キーでステージ移動",
+      "zで木から降りる",
+      "xでジェットパックを起動",
+      "cでチャット",
+      "nで鬼(周りが赤)",
+      "mで子(周りが青)",
+      "bで鬼ごっこ終了"
+    ]
   },
   {
     "name": "怪盗ゲーム2",
