--- a/projects.json
+++ b/projects.json
@@ -24,7 +24,7 @@
     "name": "怪盗ゲーム2",
     "id": "901024720",
     "detail": "スタートから警察官や防犯カメラ、レーザーに見つからないように宝石を盗んでゴールへ行くゲームです。",
-    "HowToUse": "矢印キーで移動、ボタンは非推奨です。",
+    "HowToUse": ["矢印キーで移動、ボタンは非推奨です。"],
     "urls": [{
       "label": "第1話は",
       "url": "https://scratch.mit.edu/projects/666133831",
@@ -40,7 +40,7 @@
     "name": "弓矢ゲーム",
     "id": "865738724",
     "detail": "敵の矢をよけながら的や敵に矢を当てるゲームです。アイテムも使いながら高得点を目指しましょう。",
-    "HowToUse": "上下キーで操作、スぺスキーで発射します。(連射可)　アイテムは触れたら使えます。",
+    "HowToUse": ["上下キーで操作、スぺスキーで発射します。(連射可)　アイテムは触れたら使えます。"],
     "tag":[
       "scratch",
       "shooting",
