--- a/projects.json
+++ b/projects.json
@@ -1,6 +1,7 @@
 [
   {
     "name": "オンライン広場",
+    "type": "scratch",
     "id": "718134419",
     "detail": "最大5人までプレイできるオンラインゲームです。",
     "HowToUse": [
@@ -22,6 +23,7 @@
   },
   {
     "name": "怪盗ゲーム2",
+    "type": "scratch",
     "id": "901024720",
     "detail": "スタートから警察官や防犯カメラ、レーザーに見つからないように宝石を盗んでゴールへ行くゲームです。",
     "HowToUse": ["矢印キーで移動、ボタンは非推奨です。"],
@@ -38,12 +40,25 @@
   },
   {
     "name": "弓矢ゲーム",
+    "type": "scratch",
     "id": "865738724",
     "detail": "敵の矢をよけながら的や敵に矢を当てるゲームです。アイテムも使いながら高得点を目指しましょう。",
     "HowToUse": ["上下キーで操作、スぺスキーで発射します。(連射可)　アイテムは触れたら使えます。"],
     "tag":[
       "scratch",
       "shooting",
+      "game"
+    ]
+  },
+  {
+    "name": "ミニゲーム2",
+    "type": "JS",
+    "id": "865738724",
+    "detail": "敵を上下キーでよけるゲームです。",
+    "HowToUse": ["上下キーで操作、敵に当たるとゲームオーバー"],
+    "tag":[
+      "Javascript",
+      "minigame",
       "game"
     ]
   }
