--- a/projects.json
+++ b/projects.json
@@ -53,7 +53,7 @@
   {
     "name": "ミニゲーム2",
     "type": "JS",
-    "id": "865738724",
+    "id": "avoid game/game2.html",
     "detail": "敵を上下キーでよけるゲームです。",
     "HowToUse": ["上下キーで操作、敵に当たるとゲームオーバー"],
     "tag":[
