--- a/projects.json
+++ b/projects.json
@@ -43,7 +43,7 @@
     "type": "scratch",
     "id": "865738724",
     "detail": "敵の矢をよけながら的や敵に矢を当てるゲームです。アイテムも使いながら高得点を目指しましょう。",
-    "HowToUse": ["上下キーで操作、スぺスキーで発射します。(連射可)　アイテムは触れたら使えます。"],
+    "HowToUse": ["上下キーで操作、スぺースキーで発射します。(連射可)　アイテムは触れたら使えます。"],
     "tag":[
       "scratch",
       "shooting",
