--- a/projects.json
+++ b/projects.json
@@ -61,5 +61,23 @@
       "minigame",
       "game"
     ]
+  },
+  {
+    "name": "ビル経営ゲーム",
+    "type": "scratch",
+    "id": "935894699",
+    "detail": "名前の通りビルを経営するゲームです。ただし、作りかけなので多くの機能は実装されていません。",
+    "HowToUse": [
+      "部屋をクリックで部屋を変更",
+      "矢印キーで管理人(1人だけ色が違う猫。色は毎回ランダムで変わる)を操作する",
+      "zキーで部屋の増築・破壊",
+      "xキーで背景を変える",
+      "cキーで管理人が持ってる道具を使う"
+    ],
+    "tag":[
+      "scratch",
+      "game",
+      "beta",
+    ]
   }
 ]
