--- a/projects.json
+++ b/projects.json
@@ -79,5 +79,20 @@
       "game",
       "beta"
     ]
+  },
+  {
+    "name": "大戦争ゲーム",
+    "type": "JS",
+    "id": "big war game/",
+    "detail": "見方を召喚して敵城を攻撃するゲームです。",
+    "HowToUse": [
+      "プレイ画面をクリックしてスタート",
+      "下のボタンで見方を召喚",
+      "敵の城のライフを0にするとクリア"
+    ],
+    "tag":[
+      "Javascript",
+      "game"
+    ]
   }
 ]
