--- a/projects.json
+++ b/projects.json
@@ -94,5 +94,19 @@
       "Javascript",
       "game"
     ]
+  },
+  {
+    "name": "ビル経営ゲーム",
+    "type": "scratch",
+    "id": "935894699",
+    "detail": "廊下は店に改装し、お金を稼ぎ、部屋を作ってビルを発展させましょう!",
+    "HowToUse": [
+      "管理人は矢印キーで操作",
+      "cキーで道具を使用"
+    ],
+    "tag":[
+      "scratch",
+      "game"
+    ]
   }
 ]
