--- a/projects.json
+++ b/projects.json
@@ -101,7 +101,7 @@
     "id": "935894699",
     "detail": "廊下は店に改装し、お金を稼ぎ、部屋を作ってビルを発展させましょう!",
     "HowToUse": [
-      "管理人は矢印キーで操作",
+      "管理人は矢印キー/ボタンで操作",
       "cキーで道具を使用"
     ],
     "tag":[
